# pubg

./: README.md  gradle.properties  settings.gradle
module/: .gitignore  build.gradle
module/src/main/cpp/: CMakeLists.txt  main.cpp
module/src/main/cpp/include/: ConfigUtils.h  Engine.h  GameOffsets.h
module/src/main/cpp/include/HideLibrary/: elf_util.h  hide_utils.cpp
module/src/main/cpp/include/Logger/: Logger.h
module/src/main/cpp/include/PtraceInject/: PtraceInject.cpp
module/src/main/cpp/include/filedata/: drawicon.cpp
module/src/main/cpp/include/input/: touch_helper.cpp  touch_helper.h
module/src/main/cpp/src/: GameUtils.cpp  GameUtils.h  Menu.cpp  Menu.h
test/: build.gradle
test/src/main/: AndroidManifest.xml
test/src/main/java/com/wt/test/: TestActivity.java
test/src/main/res/layout/: activity_test.xml
test/src/main/res/values/: themes.xml
